# sfrl

./: Architecture.md  Cargo.toml  LICENSE
sfrl_algorithms/: Cargo.toml
sfrl_algorithms/src/: definitions.rs  lib.rs  ppo.rs  sac.rs
sfrl_core/: Cargo.toml
sfrl_core/src/: defs.rs  lib.rs  ppo.rs  utils.rs
sfrl_core/src/algorithms/: definitions.rs  mod.rs  ppo.rs  sac.rs
sfrl_engines/: Cargo.toml
sfrl_engines/src/: lib.rs  tictactoe.rs
sfrl_envs/: Cargo.toml
sfrl_envs/src/: lib.rs  tictactoe_env.rs
sfrl_runner/: Cargo.toml
sfrl_runner/src/: main.rs
