[package]
name = "sfrl_algorithms"
version = "0.1.0"
edition = "2024"

[lib]
name = "sfrl_algorithms"
path = "src/lib.rs"

[features]
# Enable both algorithms by default. Downstream crates can opt out.
default = ["ppo", "sac"]
ppo = []
sac = []

[dependencies]
sfrl_core = { path = "../sfrl_core" }
log = { workspace = true }
